kube-prometheus-stack-nginx/additionatls/ingress-grafana.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-grafana
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: nginx
#    cert-manager.io/cluster-issuer: letsencrypt-testing
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
#    nginx.ingress.kubernetes.io/proxy-body-size: 1024m
#    nginx.ingress.kubernetes.io/whitelist-source-range: 'XX.XX.XX.XX/32, YY.YY.YY.YY/32'
#    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
#    nginx.ingress.kubernetes.io/auth-url: "https://$host/oauth2/auth"
#    nginx.ingress.kubernetes.io/auth-signin: "https://$host/oauth2/start?rd=$escaped_request_uri"
spec:
#  tls:
#    - hosts:
#        - k8s-testing.my.net
#      secretName: nginx-dashboard-tls
  rules:
    - host: k8s-testing.my.net
      http:
        paths:
          - backend:
              service:
                name: anzu-grafana
                port:
                  number: 80
            pathType: Prefix
            path: /
